# pgn4people-poc

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/: game-tree-concepts.md
src/pgn4people_poc/: __init__.py  __main__.py  __version__.py  build_tree.py  classes_arboreal.py  compile_and_output_report.py  constants.py  construct_output.py  error_processing.py  errors.py  get_process_user_CLI_input.py  get_process_user_input.py  jdr_utilities.py  pgn4people.py  pgn4people_CLI.py  pgn_utilities.py  process_CLI.py  process_pgn_file.py  strip_balanced_braces.py  traverse_tree.py  utilities.py
src/pgn4people_poc/example_pgns/: __init__.py  demo_pgn_1.pgn  test_pgn_1_simple_one_variation.pgn  test_pgn_2_simple_repeated_variations_and_depth_2_variation.pgn  test_pgn_5.pgn  test_pgn_6.pgn
tests/Test_PGNs/: Black_alternatives_only.pgn  Excess_unmatched_open_brace.pgn  Initial_unmatched_closing_brace.pgn  Mainline_only_end_on_Black_move.pgn  Mainline_only_end_on_White_move.pgn  No_move_text.pgn  Other_whitespace_after_first_game.pgn  Other_whitespace_between_headers_and_movetext.pgn  R0_25.pgn  Start_with_closing_paren.pgn  Start_with_open_paren.pgn  Three_games_one_file.pgn  Two_blank_lines_after_header.pgn  White_alternatives_only.pgn  Whitespace_on_line_after_movetext.pgn  demo_pgn_1_old.pgn  test_pgn_3_space_between_movenumber_and_movetext.pgn  test_pgn_4.pgn  test_pgn_6.pgn
